force-app/main/default/objects/BidManagement__c/BidManagement__c.object-meta.xml
<CustomObject>
    <label>入札</label>
    <nameField>
        <label>入札名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>