force-app/main/default/objects/BidManagement__c/fields/BASISNumber__c.field-meta.xml
<CustomField>
    <fullName>BASISNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>BASIS正管番号</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>