force-app/main/default/objects/BidManagement__c/fields/BidAmount__c.field-meta.xml
<CustomField>
    <fullName>BidAmount__c</fullName>
    <label>落札金額</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>