force-app/main/default/objects/BidManagement__c/fields/BidMethod__c.field-meta.xml
<CustomField>
    <fullName>BidMethod__c</fullName>
    <label>落札決定方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>価格のみ</fullName>
            </value>
            <value>
                <fullName>総合評価方式（簡易（施工計画有））</fullName>
            </value>
            <value>
                <fullName>総合評価方式（簡易（施工計画無））</fullName>
            </value>
            <value>
                <fullName>総合評価方式（標準）</fullName>
            </value>
            <value>
                <fullName>総合評価方式（高度技術提案型）</fullName>
            </value>
            <value>
                <fullName>プロポーザル方式</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>