force-app/main/default/objects/BidManagement__c/fields/BidNumber__c.field-meta.xml
<CustomField>
    <fullName>BidNumber__c</fullName>
    <displayFormat>BM-{0000000}</displayFormat>
    <label>入札番号</label>
    <type>AutoNumber</type>
</CustomField>