force-app/main/default/objects/BidManagement__c/fields/BidOpenDate__c.field-meta.xml
<CustomField>
    <fullName>BidOpenDate__c</fullName>
    <label>開札日時（年月日）</label>
    <type>Date</type>
</CustomField>