force-app/main/default/objects/BidManagement__c/fields/BidOpenTime__c.field-meta.xml
<CustomField>
    <fullName>BidOpenTime__c</fullName>
    <label>開札日時（時 分）</label>
    <type>Time</type>
</CustomField>