force-app/main/default/objects/BidManagement__c/fields/BudgetInfo__c.field-meta.xml
<CustomField>
    <fullName>BudgetInfo__c</fullName>
    <label>予算情報</label>
    <type>TextArea</type>
</CustomField>