force-app/main/default/objects/BidManagement__c/fields/CompanyBidAmount__c.field-meta.xml
<CustomField>
    <fullName>CompanyBidAmount__c</fullName>
    <label>当社応札金額</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>