force-app/main/default/objects/BidManagement__c/fields/CompanyBidAmountRatio__c.field-meta.xml
<CustomField>
    <fullName>CompanyBidAmountRatio__c</fullName>
    <description>落札金額/当社応札金額</description>
    <formula>BidAmount__c / CompanyBidAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当社応札金額比率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>