force-app/main/default/objects/BidManagement__c/fields/CompanyBidRate__c.field-meta.xml
<CustomField>
    <fullName>CompanyBidRate__c</fullName>
    <description>当社応札金額/予定価格（公表価格or推定価格）　※公表を優先</description>
    <formula>IF (
  OR( ISBLANK(PublishedEstimatePrice__c), ISNULL(PublishedEstimatePrice__c) ),
  CompanyBidAmount__c / EstimatedPresumptionPrice__c,
  CompanyBidAmount__c / PublishedEstimatePrice__c
)</formula>
    <label>当社応札率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>