force-app/main/default/objects/BidManagement__c/fields/Consul__c.field-meta.xml
<CustomField>
    <fullName>Consul__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コンサル</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>入札 (コンサル)</relationshipLabel>
    <relationshipName>Acc3</relationshipName>
    <type>Lookup</type>
</CustomField>