force-app/main/default/objects/BidManagement__c/fields/EquipmentPriceErrorRate__c.field-meta.xml
<CustomField>
    <fullName>EquipmentPriceErrorRate__c</fullName>
    <formula>ABS( 1- (EstimatedEquipmentPrice__c / PublishedEquipmentPrice__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>機器費公表価格　誤差率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>