force-app/main/default/objects/BidManagement__c/fields/EstablishedCompanyRemarks__c.field-meta.xml
<CustomField>
    <fullName>EstablishedCompanyRemarks__c</fullName>
    <label>既設社 備考</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>