force-app/main/default/objects/BidManagement__c/fields/EstimatedEquipmentPrice__c.field-meta.xml
<CustomField>
    <fullName>EstimatedEquipmentPrice__c</fullName>
    <label>機器費公表価格　推定価格</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>