force-app/main/default/objects/BidManagement__c/fields/EstimatedMinimumPrice__c.field-meta.xml
<CustomField>
    <fullName>EstimatedMinimumPrice__c</fullName>
    <label>最低制限価格　推定価格</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>