force-app/main/default/objects/BidManagement__c/fields/EstimatedPresumptionPrice__c.field-meta.xml
<CustomField>
    <fullName>EstimatedPresumptionPrice__c</fullName>
    <label>予定価格　推定価格</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>