force-app/main/default/objects/BidManagement__c/fields/EstimatedPriceErrorRate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedPriceErrorRate__c</fullName>
    <formula>ABS(1 - ( EstimatedPresumptionPrice__c /  PublishedEstimatePrice__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>予定価格　誤差率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>