force-app/main/default/objects/BidManagement__c/fields/EstimatedSurveyStandardPrice__c.field-meta.xml
<CustomField>
    <fullName>EstimatedSurveyStandardPrice__c</fullName>
    <label>調査基準価格　推定価格</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>