force-app/main/default/objects/BidManagement__c/fields/Field1nyusatsu2__c.field-meta.xml
<CustomField>
    <fullName>Field1nyusatsu2__c</fullName>
    <description>(最低制限公表価格)/(予定公表価格)</description>
    <formula>PublishedMinimumPrice__c  /  PublishedEstimatePrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(最低制限公表価格)/(予定公表価格)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>