force-app/main/default/objects/BidManagement__c/fields/Field1nyusatsu__c.field-meta.xml
<CustomField>
    <fullName>Field1nyusatsu__c</fullName>
    <description>(調査基準公表価格)/(予定公表価格)</description>
    <formula>PublishedSurveyStandardPrice__c / PublishedEstimatePrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(調査基準公表価格)/(予定公表価格)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>