force-app/main/default/objects/BidManagement__c/fields/GensetsuDate__c.field-meta.xml
<CustomField>
    <fullName>GensetsuDate__c</fullName>
    <label>現説日時（年月日）</label>
    <type>Date</type>
</CustomField>