force-app/main/default/objects/BidManagement__c/fields/GensetsuTime__c.field-meta.xml
<CustomField>
    <fullName>GensetsuTime__c</fullName>
    <label>現説日時（時 分）</label>
    <type>Time</type>
</CustomField>