force-app/main/default/objects/BidManagement__c/fields/IsCompetitionNotDisclosed__c.field-meta.xml
<CustomField>
    <fullName>IsCompetitionNotDisclosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>競争先非公表</label>
    <type>Checkbox</type>
</CustomField>