force-app/main/default/objects/BidManagement__c/fields/IsDeclineCompanyBid__c.field-meta.xml
<CustomField>
    <fullName>IsDeclineCompanyBid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>当社入札辞退</label>
    <type>Checkbox</type>
</CustomField>