force-app/main/default/objects/BidManagement__c/fields/IsMatchJikansuiSekisan__c.field-meta.xml
<CustomField>
    <fullName>IsMatchJikansuiSekisan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>事管推積算通り</label>
    <type>Checkbox</type>
</CustomField>