force-app/main/default/objects/BidManagement__c/fields/IsPublishFortificationNumber__c.field-meta.xml
<CustomField>
    <fullName>IsPublishFortificationNumber__c</fullName>
    <label>工事数量公表　公表有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>公表有（事前）</fullName>
            </value>
            <value>
                <fullName>公表有（事後）</fullName>
            </value>
            <value>
                <fullName>公表無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>