force-app/main/default/objects/BidManagement__c/fields/IsPublishMinimumPrice__c.field-meta.xml
<CustomField>
    <fullName>IsPublishMinimumPrice__c</fullName>
    <label>最低制限価格　公表有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>公表有（事前）</fullName>
            </value>
            <value>
                <fullName>公表有（事後）</fullName>
            </value>
            <value>
                <fullName>公表無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>