force-app/main/default/objects/BidManagement__c/fields/IsVariableMinimumPrice__c.field-meta.xml
<CustomField>
    <fullName>IsVariableMinimumPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>最低制限価格　変動有</label>
    <type>Checkbox</type>
</CustomField>