force-app/main/default/objects/BidManagement__c/fields/IsVariableSurveyStandardPrice__c.field-meta.xml
<CustomField>
    <fullName>IsVariableSurveyStandardPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>調査基準価格　変動有</label>
    <type>Checkbox</type>
</CustomField>