force-app/main/default/objects/BidManagement__c/fields/IsWinBidUnknown__c.field-meta.xml
<CustomField>
    <fullName>IsWinBidUnknown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>落札金額不明のため推定値</label>
    <type>Checkbox</type>
</CustomField>