force-app/main/default/objects/BidManagement__c/fields/JikansuiSekisanNo__c.field-meta.xml
<CustomField>
    <fullName>JikansuiSekisanNo__c</fullName>
    <label>事管推積算ＮＯ</label>
    <length>12</length>
    <type>Text</type>
</CustomField>