force-app/main/default/objects/BidManagement__c/fields/JVApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>JVApplicationDate__c</fullName>
    <label>JV申請（年月日）</label>
    <type>Date</type>
</CustomField>