force-app/main/default/objects/BidManagement__c/fields/JVApplicationTime__c.field-meta.xml
<CustomField>
    <fullName>JVApplicationTime__c</fullName>
    <label>JV申請（時 分）</label>
    <type>Time</type>
</CustomField>