force-app/main/default/objects/BidManagement__c/fields/LastCustomer__c.field-meta.xml
<CustomField>
    <fullName>LastCustomer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>最終顧客</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>入札 (最終顧客)</relationshipLabel>
    <relationshipName>Acc2</relationshipName>
    <type>Lookup</type>
</CustomField>