force-app/main/default/objects/BidManagement__c/fields/LastCustomerName__c.field-meta.xml
<CustomField>
    <fullName>LastCustomerName__c</fullName>
    <formula>LastCustomer__r.Name</formula>
    <label>最終顧客</label>
    <type>Text</type>
</CustomField>