force-app/main/default/objects/BidManagement__c/fields/MinimumLimitRatio__c.field-meta.xml
<CustomField>
    <fullName>MinimumLimitRatio__c</fullName>
    <description>最低制限価格÷予定価格（公表価格or推定価格）　※公表を優先</description>
    <formula>IF (
  OR( ISBLANK(PublishedEstimatePrice__c), ISNULL(PublishedEstimatePrice__c) ),
   EstimatedMinimumPrice__c / EstimatedPresumptionPrice__c,
   PublishedMinimumPrice__c / PublishedEstimatePrice__c
 )</formula>
    <label>最低制限比率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>