force-app/main/default/objects/BidManagement__c/fields/MinimumPriceErrorRate__c.field-meta.xml
<CustomField>
    <fullName>MinimumPriceErrorRate__c</fullName>
    <formula>ABS( 1 - (EstimatedMinimumPrice__c / PublishedMinimumPrice__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最低制限価格　誤差率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>