force-app/main/default/objects/BidManagement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>入札</relationshipLabel>
    <relationshipName>Opp1</relationshipName>
    <type>Lookup</type>
</CustomField>