force-app/main/default/objects/BidManagement__c/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <label>商談形態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>官・情報（指名）</fullName>
            </value>
            <value>
                <fullName>官・情報（随契）</fullName>
            </value>
            <value>
                <fullName>官・情報（公募）</fullName>
            </value>
            <value>
                <fullName>官・情報（一般競争）</fullName>
            </value>
            <value>
                <fullName>官・情報（他入札）</fullName>
            </value>
            <value>
                <fullName>官・直（指名）</fullName>
            </value>
            <value>
                <fullName>官・直（随契）</fullName>
            </value>
            <value>
                <fullName>官・直（公募)</fullName>
            </value>
            <value>
                <fullName>官・直（一般）</fullName>
            </value>
            <value>
                <fullName>官・直（他入札）</fullName>
            </value>
            <value>
                <fullName>官・間（GC）</fullName>
            </value>
            <value>
                <fullName>官・間（SC）</fullName>
            </value>
            <value>
                <fullName>官・間（その他）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>