force-app/main/default/objects/BidManagement__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>納期（年月日）</label>
    <type>Date</type>
</CustomField>