force-app/main/default/objects/BidManagement__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>プラント</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBU__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>特高（66/77kV）</fullName>
            </value>
            <value>
                <fullName>特高（22/33kV）</fullName>
            </value>
            <value>
                <fullName>高圧（6.6kV・サブ変）</fullName>
            </value>
            <value>
                <fullName>超高圧（110/154kV）</fullName>
            </value>
            <value>
                <fullName>特高（22kV・SNW）</fullName>
            </value>
            <value>
                <fullName>電力監視</fullName>
            </value>
            <value>
                <fullName>受変電その他</fullName>
            </value>
            <value>
                <fullName>9000シリーズ</fullName>
            </value>
            <value>
                <fullName>2000シリーズ</fullName>
            </value>
            <value>
                <fullName>MPC</fullName>
            </value>
            <value>
                <fullName>UPSその他</fullName>
            </value>
            <value>
                <fullName>D/G</fullName>
            </value>
            <value>
                <fullName>GT/G</fullName>
            </value>
            <value>
                <fullName>常用発電機</fullName>
            </value>
            <value>
                <fullName>自家発その他</fullName>
            </value>
            <value>
                <fullName>BAS</fullName>
            </value>
            <value>
                <fullName>BMS</fullName>
            </value>
            <value>
                <fullName>セキュリティー</fullName>
            </value>
            <value>
                <fullName>ビルシステムその他</fullName>
            </value>
            <value>
                <fullName>LED屋外</fullName>
            </value>
            <value>
                <fullName>LED屋内</fullName>
            </value>
            <value>
                <fullName>レンタル</fullName>
            </value>
            <value>
                <fullName>液晶・DLP</fullName>
            </value>
            <value>
                <fullName>映像その他</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>スマエネ</fullName>
            </value>
            <value>
                <fullName>直流配電</fullName>
            </value>
            <value>
                <fullName>PVスマエネその他</fullName>
            </value>
            <value>
                <fullName>電源その他</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>