force-app/main/default/objects/BidManagement__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>入札</relationshipLabel>
    <relationshipName>Product2_1</relationshipName>
    <type>Lookup</type>
</CustomField>