force-app/main/default/objects/BidManagement__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>物件</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>入札</relationshipLabel>
    <relationshipName>Property1</relationshipName>
    <type>Lookup</type>
</CustomField>