force-app/main/default/objects/BidManagement__c/fields/PublishedEquipmentPrice__c.field-meta.xml
<CustomField>
    <fullName>PublishedEquipmentPrice__c</fullName>
    <label>機器費公表価格　公表価格</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>