force-app/main/default/objects/BidManagement__c/fields/PublishedEstimatePrice__c.field-meta.xml
<CustomField>
    <fullName>PublishedEstimatePrice__c</fullName>
    <label>予定価格　公表価格</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>