force-app/main/default/objects/BidManagement__c/fields/PublishedMinimumPrice__c.field-meta.xml
<CustomField>
    <fullName>PublishedMinimumPrice__c</fullName>
    <label>最低制限価格　公表価格</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>