force-app/main/default/objects/BidManagement__c/fields/PublishedSurveyStandardPrice__c.field-meta.xml
<CustomField>
    <fullName>PublishedSurveyStandardPrice__c</fullName>
    <label>調査基準価格　公表価格</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>