force-app/main/default/objects/BidManagement__c/fields/PumpStation__c.field-meta.xml
<CustomField>
    <fullName>PumpStation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>機場</label>
    <referenceTo>PumpStation__c</referenceTo>
    <relationshipLabel>入札</relationshipLabel>
    <relationshipName>PumpStation</relationshipName>
    <type>Lookup</type>
</CustomField>