force-app/main/default/objects/BidManagement__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>地域</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>入札</relationshipLabel>
    <relationshipName>Region1</relationshipName>
    <type>Lookup</type>
</CustomField>